# vctx

./: .gitignore  README.md  pyproject.toml
docs/: api.md  architecture.md  context.md  graph.md  model-stack.md  workflow.md
docs/examples/: vctx.visual-auto-side-effect.toml
docs/graph/: README.md  app.md  chunking.md  cli.md  io.md  manifest.md  model-transforms.md  models.md  render.md  sources.md  subtitles.md  transcript.md
scripts/: smoke_local_asr.py
src/vctx/: __init__.py  cli.py  config.py
src/vctx/app/: chunk.py  config.py  credentials.py  doctor.py  prepare.py  render.py  result.py
src/vctx/chunking/: chunker.py  tokens.py
src/vctx/io/: cache.py  json_dump.py  writer.py
src/vctx/models/: artifacts.py  chunks.py  common.py  manifest.py  media.py  metadata.py  visual.py  (+1 more)
tests/: test_ai_dispatch_contracts.py  test_config_and_transforms.py  test_config_file.py  test_faster_whisper_asr.py  test_instance_config.py  test_local_prepare.py  test_model_resolution.py  test_online_asr.py  test_openrouter_registry.py  test_prepare_asr_integration.py  test_prepare_llm_essential_cases.py  test_prepare_llm_knowledge_flow.py  test_prepare_partial.py  test_prepare_url.py  test_prepare_url_asr.py  test_prepare_visual_capture.py  test_prepare_visual_ocr.py  test_prepare_visual_vlm.py  test_render_visual_records.py  test_visual_acquisition_planning.py  test_visual_cases.py  test_visual_evidence_scoring.py  test_visual_frames.py  test_visual_model_ref_routes.py  test_webvtt_parser.py  test_ytdlp_source.py
tests/integration/: test_fixed_ted_visual_side_effects.py
(+28 files in other folders)
